# danebulat.github.io

./: .gitignore  Cargo.toml  Makefile.toml  Trunk.toml  articles.markdown  contact.markdown  index.html  package.json  site.hs
.github/workflows/: gh-pages-deploy.yml
cargo-make/: clean.toml  client-process.toml  compile.toml  lint.toml  main.toml  node.toml  playwright-test.toml  playwright-trunk-test.toml  server-process.toml
css/: ace.min.css  custom.css
docs/: articles.html  contact.html  index.html
docs/css/: ace.min.css  custom.css
src/: app.rs  lib.rs  macros.rs  main.rs  utils.rs
src/components/: mod.rs
src/components/hooks/: use_random.rs  use_theme_mode.rs
src/components/layouts/: certificates.rs  mod.rs  nav_bar.rs  skills.rs  summary.rs  theme.rs  work.rs
src/components/ui/: mod.rs  sheet.rs  theme_toggle.rs
style/: input.css
templates/: default.html  footer.html
